# license

./: Cargo.toml
keygen/: Cargo.toml  build.rs  cbindgen.toml
keygen/include/: keygen.h
keygen/src/: lib.rs
liccore/: Cargo.toml
liccore/src/: lib.rs
liccore/src/base/: base16.rs  base64.rs  mod.rs
liccore/src/common/: mod.rs
liccore/src/ffi_utils/: mod.rs
liccore/src/keypair/: mod.rs
liccore/src/keypair/ed25519/: mod.rs
liccore/src/keypair/rsa/: mod.rs
liccore/src/license/: mod.rs
liccore/src/signature/: mod.rs
liccore/src/signature/ed25519/: mod.rs
liccore/src/signature/rsa/: mod.rs
liccore/tests/base/: base16.rs  base64.rs  mod.rs
licgen/: Cargo.toml  build.rs  cbindgen.toml
licgen/include/: licgen.h
licgen/src/: lib.rs
licver/: Cargo.toml  build.rs  cbindgen.toml
licver/include/: licver.h
licver/src/: lib.rs
licver/tests/: end_to_end.rs
