[package]
name = "liccore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["pem", "sha2"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
