[package]
name = "licver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "licver"
crate-type = ["rlib", "cdylib"]

[dependencies]
liccore = { path = "../liccore" }  # 공유 크레이트 참조
rsa = { version = "0.9", features = ["pem", "sha2"] }
base64 = "0.22.1"

[dev-dependencies]
keygen = { path = "../keygen" }
licgen = { path = "../licgen" }

[build-dependencies]
cbindgen = "0.29"
